Fixed spacing.

--- a/scripts/paged.css
+++ b/scripts/paged.css
@@ -293,15 +293,6 @@ div.chapter, div.glossary, div.whole-index {
 Whitespace managament, mostly reductions.
 {{{
 */
-div.example, table.cmavo-list, ul.itemizedlist, blockquote {
-  margin: 0pt;
-  margin-bottom: 0.4em;
-  margin-left: 2em;
-  border-spacing: 0pt;
-  border: 0pt;
-  padding: 0pt;
-}
-
 div.example, table.cmavo-list {
   margin-top: .5em;
   margin-bottom: .5em;
@@ -309,6 +300,7 @@ div.example, table.cmavo-list {
 
 table, tr, ul, ol {
   margin: 0pt;
+  margin-left: 2em;
   margin-bottom: 0.4em;
   border-spacing: 0pt;
   border: 0pt;
